test/files/neg/t8704.scala


class C(i: Int)(implicit j: Int)(implicit k: Int)(n: Int) {
  def f = n
}
